# maia2

./: .gitignore  AGENTS.md  README.md  play_maia2.py  pyproject.toml
maia2/: __init__.py  dataset.py  fetch_data.sh  inference.py  main.py  model.py  requirements.txt  train.py  utils.py
maia2/web/: __init__.py  app.py
maia2/web/templates/: index.html
react-app/: GETTING_STARTED.md  README.md  app_flask.py  package.json
react-app/public/: index.html
react-app/src/: App.js
react-app/src/components/: ChessBoard.jsx  Header.jsx  Results.jsx  Sidebar.jsx
react-app/src/services/: api.js
web/: README.md  app.py  index.html  script.js  start.bat  styles.css
