[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "maia2"
authors = [{name = "csslab", email = "josephtang@cs.toronto.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "chess==1.10.0",
    "einops==0.8.0",
    "gdown==5.2.0",
    "numpy==2.1.3",
    "pandas==2.2.3",
    "pyyaml>=6.0.2",
    "pyzstd==0.15.9",
    "requests==2.32.3",
    "torch==2.4.0",
    "tqdm==4.65.0",
]

[project.urls]
Home = "https://github.com/CSSLab/maia2"
